--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "relay": "mkdir -p ./src/__generated__ && relay-compiler"
   },
   "dependencies": {
     "@carbon/icons-react": "^11.33.0",
+    "babel-plugin-relay": "^16.2.0",
     "baseui": "^14.0.0",
     "baseweb": "^3.0.7",
     "firebase": "^10.7.1",
+    "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-relay": "^16.2.0",
     "react-router-dom": "^6.21.0",
     "recoil": "^0.7.7",
+    "relay": "^0.8.0-1",
+    "relay-compiler": "^16.2.0",
+    "relay-runtime": "^16.2.0",
     "styletron-engine-atomic": "^1.6.2",
     "styletron-engine-monolithic": "^1.0.0",
     "styletron-react": "^6.1.1",
@@ -26,6 +33,7 @@
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/react-relay": "^16.0.6",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -33,6 +41,7 @@
     "eslint-plugin-baseui": "^13.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "relay-compiler-language-typescript": "^15.0.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
