feat:educational-query-updated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "types": ["relay"],
     "outDir": "./src/__generated__"
   },
-  "include": ["src/**/*.tsx", "src/**/*.ts"],
+  "include": ["src/**/*.tsx", "src/**/*.ts", "vite-env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
