--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^11.33.0",
-    "babel-plugin-relay": "^16.2.0",
     "baseui": "^14.0.0",
     "baseweb": "^3.0.7",
+    "fetch-retry": "^5.0.6",
     "firebase": "^10.7.1",
-    "graphql": "^16.8.1",
+    "graphql-sse": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-relay": "^16.2.0",
     "react-router-dom": "^6.21.0",
     "recoil": "^0.7.7",
     "relay": "^0.8.0-1",
-    "relay-compiler": "^16.2.0",
     "relay-runtime": "^16.2.0",
     "styletron-engine-atomic": "^1.6.2",
     "styletron-engine-monolithic": "^1.0.0",
     "styletron-react": "^6.1.1",
-    "types": "^0.1.1"
+    "types": "^0.1.1",
+    "vite-plugin-ssr": "^0.4.142"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
@@ -37,11 +37,16 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "babel-plugin-relay": "^16.2.0",
     "eslint": "^8.55.0",
     "eslint-plugin-baseui": "^13.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "graphql": "^16.8.1",
+    "react-error-overlay": "^6.0.9",
+    "relay-compiler": "^16.2.0",
     "relay-compiler-language-typescript": "^15.0.1",
+    "relay-config": "^12.0.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
