--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^11.33.0",
-    "baseui": "^14.0.0",
+    "baseui": "^0.0.0-next-805977873",
     "baseweb": "^3.0.7",
     "fetch-retry": "^5.0.6",
     "firebase": "^10.7.1",
@@ -34,12 +34,13 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/react-relay": "^16.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "@vitejs/plugin-react": "^4.2.1",
     "babel-plugin-relay": "^16.2.0",
     "eslint": "^8.55.0",
     "eslint-plugin-baseui": "^13.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "graphql": "^16.8.1",
